# play-solana

./: Cargo.toml  README.md  test-exe-in-github-action.py
.github/workflows/: develop.yml  release.yml
src/: main.rs
