[package]
name = "play-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana_rbpf = "=0.2.32"
serde = "1.0.143"
serde_json = "1.0.83"
solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", version = "=1.12.0" }
solana-logger = { git = "https://github.com/solana-labs/solana", version = "=1.12.0" }
solana-program-runtime = { git = "https://github.com/solana-labs/solana", version = "=1.12.0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", version = "=1.12.0" }
